# android/swagger.json
@@ -1685,6 +1685,8 @@
             "required": [
                 "current_balance",
                 "latest_categories",
+                "prev_period_expense",
+                "prev_period_income",
                 "total_expense",
                 "total_income"
             ],
@@ -1698,6 +1700,14 @@
                     "items": {
                         "$ref": "#/definitions/dto.Category"
                     }
+                },
+                "prev_period_expense": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "prev_period_income": {
+                    "type": "number",
+                    "format": "double"
                 },
                 "total_expense": {
                     "type": "number",
